<resources>
    <string name="app_name">flaxgt_individual_project_4</string>
    <string name="author">By: Griffin Flaxman</string>
    <string name="registration_btn_text">Registration</string>
    <string name="login_btn_text">Login</string>
    <string name="register_text">Register</string>
    <string name="parent_account_text">Parent Account</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="email_text">Email</string>
    <string name="email_text_hint">example@example.com</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="child_account_text">Child Account</string>
    <string name="submit_btn_text">Submit</string>
    <string name="toggle_account_cb_text">Toggle Account -</string>
    <string name="choose_a_level_text">Choose A Level</string>
    <string name="easy_text">Easy</string>
    <string name="medium_text">Medium</string>
    <string name="hard_text">Hard</string>
    <string name="brutal_text">Brutal</string>
    <string name="start_btn_text">Start</string>
    <string name="go_back_btn_text">Go Back</string>
    <string name="success_text">Success.</string>
    <string name="failure_text">Incorrect pattern. Please try again.</string>
    <string name="game_screen_drop_spot">\t</string>
    <string name="game_map_desc">Game Map</string>
    <string name="game_character_desc">Game Character</string>
    <string name="child_stats_title_text">Parent\'s Report</string>
    <string name="child_stats_complete_text">Complete</string>
    <string name="child_stats_incomplete_text">Incomplete</string>
    <string name="easy_level_1_text">Easy - Level 1</string>
    <string name="easy_level_2_text">Easy - Level 2</string>
    <string name="easy_level_3_text">Easy - Level 3</string>
    <string name="medium_level_1_text">Medium - Level 1</string>
    <string name="medium_level_2_text">Medium - Level 2</string>
    <string name="medium_level_3_text">Medium - Level 3</string>
    <string name="hard_level_1_text">Hard - Level 1</string>
    <string name="hard_level_2_text">Hard - Level 2</string>
    <string name="hard_level_3_text">Hard - Level 3</string>
    <string name="brutal_level_1_text">Brutal - Level 1</string>
    <string name="brutal_level_2_text">Brutal - Level 2</string>
    <string name="brutal_level_3_text">Brutal - Level 3</string>
    <string name="logout_btn_text">Logout</string>
    <string name="level_1_easy_button_desc">Level 1 Easy Button</string>
    <string name="level_2_easy_button_desc">Level 2 Easy Button</string>
    <string name="level_3_easy_button_desc">Level 3 Easy Button</string>
    <string name="level_1_medium_button_desc">Level 1 Medium Button</string>
    <string name="level_2_medium_button_desc">Level 2 Medium Button</string>
    <string name="level_3_medium_button_desc">Level 3 Medium Button</string>
    <string name="level_1_hard_button_desc">Level 1 Hard Button</string>
    <string name="level_2_hard_button_desc">Level 2 Hard Button</string>
    <string name="level_3_hard_button_desc">Level 3 Hard Button</string>
    <string name="level_1_brutal_button_desc">Level 1 Brutal Button</string>
    <string name="level_2_brutal_button_desc">Level 2 Brutal Button</string>
    <string name="level_3_brutal_button_desc">Level 3 Brutal Button</string>
    <string name="leaderboard_title_text">Leaderboard</string>
    <string name="leaderboard_desc_text">Displays the Top 5 children with the least amount of incorrect game patterns.</string>
</resources>
