<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelsScreenActivity"
    android:background="@color/appBackgroundColor">

    <!--Creates activity title-->
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_level_text"
        android:textSize="@dimen/title_text_size"
        android:layout_marginBottom="@dimen/levels_screen_title_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <!--Easy level title text-->
    <TextView
        android:id="@+id/easy_level_title_text"
        android:text="@string/easy_text"
        android:textSize="@dimen/levels_screen_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        android:layout_marginBottom="@dimen/levels_screen_levels_margin"/>

    <!--Creates three easy buttons based on the levels-->
    <RelativeLayout
        android:id="@+id/easy_level_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/easy_level_title_text">

        <ImageView
            android:id="@+id/level_1_easy_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/level_1_easy_button_desc"/>

        <ImageView
            android:id="@+id/level_2_easy_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/level_2_easy_button_desc"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/level_3_easy_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/level_3_easy_button_desc"
            android:visibility="gone"/>
    </RelativeLayout>

    <!--Medium level title text-->
    <TextView
        android:id="@+id/medium_level_title_text"
        android:text="@string/medium_text"
        android:textSize="@dimen/levels_screen_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/easy_level_buttons"
        android:layout_marginBottom="@dimen/levels_screen_levels_margin"/>

    <!--Creates three medium buttons based on the levels-->
    <RelativeLayout
        android:id="@+id/medium_level_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/medium_level_title_text">

        <ImageView
            android:id="@+id/level_1_medium_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/level_1_medium_button_desc"/>

        <ImageView
            android:id="@+id/level_2_medium_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/level_2_medium_button_desc"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/level_3_medium_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/level_3_medium_button_desc"
            android:visibility="gone"/>
    </RelativeLayout>

    <!--Hard title text-->
    <TextView
        android:id="@+id/hard_level_title_text"
        android:text="@string/hard_text"
        android:textSize="@dimen/levels_screen_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medium_level_buttons"
        android:layout_marginBottom="@dimen/levels_screen_levels_margin"/>

    <!--Creates three hard buttons based on the levels-->
    <RelativeLayout
        android:id="@+id/hard_level_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/hard_level_title_text">

        <ImageView
            android:id="@+id/level_1_hard_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/level_1_hard_button_desc" />

        <ImageView
            android:id="@+id/level_2_hard_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/level_2_hard_button_desc"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/level_3_hard_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/level_3_hard_button_desc"
            android:visibility="gone"/>
    </RelativeLayout>

    <!--Brutal title text-->
    <TextView
        android:id="@+id/brutal_level_title_text"
        android:text="@string/brutal_text"
        android:textSize="@dimen/levels_screen_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hard_level_buttons"
        android:layout_marginBottom="@dimen/levels_screen_levels_margin"/>

    <!--Creates three brutal buttons based on the levels-->
    <RelativeLayout
        android:id="@+id/brutal_level_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/brutal_level_title_text">

        <ImageView
            android:id="@+id/level_1_brutal_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/level_1_brutal_button_desc" />

        <ImageView
            android:id="@+id/level_2_brutal_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/level_2_brutal_button_desc"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/level_3_brutal_btn"
            android:src="@drawable/levels_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/level_3_brutal_button_desc"
            android:visibility="gone"/>
    </RelativeLayout>

    <!--Creates a logout button-->
    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_btn_text"
        android:textSize="@dimen/levels_screen_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>