<?xml version="1.0" encoding="utf-8"?>
<!--Makes the stats chart vertical-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChildStatsActivity"
    android:background="@color/appBackgroundColor"
    android:orientation="vertical">

    <!--Displays the title-->
    <TextView
        android:id="@+id/child_stats_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_stats_title_text"
        android:textSize="@dimen/title_text_size"
        android:textStyle = "bold"
        android:layout_gravity="center"/>

    <!--Table Row 1-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_level_1_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/EZ_LVL_1_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Table row 2-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_level_2_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/EZ_LVL_2_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Table row 3-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_level_3_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/EZ_LVL_3_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Table row 4-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_level_1_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/MED_LVL_1_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Table row 5-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_level_2_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/MED_LVL_2_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Table row 6-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_level_3_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/MED_LVL_3_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Table row 7-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_level_1_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/HRD_LVL_1_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Table row 8-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_level_2_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/HRD_LVL_2_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Table row 9-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_level_3_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/HRD_LVL_3_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Table row 10-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brutal_level_1_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/BRUT_LVL_1_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Table row 11-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brutal_level_2_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/BRUT_LVL_2_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Table row 12-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brutal_level_3_text"
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/BRUT_LVL_3_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/child_stats_chart_info_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <!--Title text for the leader board-->
    <TextView
        android:id="@+id/leaderboard_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard_title_text"
        android:textStyle="bold"
        android:textSize="@dimen/title_text_size"
        android:layout_gravity="center"/>

    <!--Title text for the leader board-->
    <TextView
        android:id="@+id/leaderboard_desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard_desc_text"
        android:textSize="@dimen/child_stats_leaderboard_desc_text_size"
        android:layout_gravity="center"/>

    <!--List the displays the leader board-->
    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--Logout button-->
    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_btn_text"
        android:textSize="@dimen/child_stats_chart_info_text_size"
        android:layout_gravity="center"/>
</LinearLayout>